fix: gave gallery 2 columns on mobile

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,11 +3,6 @@
     grid-template-columns: auto auto !important;
   }
 }
-@media screen and (max-width: 480px) {
-  #gallery {
-    grid-template-columns: auto !important;
-  }
-}
 
 #gallery {
   display: grid;
